--- a/MyApplication2/app/src/main/res/values/strings.xml
+++ b/MyApplication2/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">MorseCode</string>
+    <string name="editTextHint">Enter Text</string>
+    <string name="convertMorse">Convert to Morse Code</string>
 </resources>
